feat: stabilize infrastructure deployment and fix backend compilation errors